styles/style.css
:root
{
	/* Accents */
	--PrimaryColor: #3C96E1;
	--InvertedPrimaryColor: oklch(from var(--PrimaryColor) l c calc(h + 180));
	--ContrastColor: var(--InvertedPrimaryColor);
	--FocusColor: var(--InvertedPrimaryColor);
	--ErrorColor: #D11616;

	/* Borders */
	--BorderColor0: color-mix(in oklab, var(--PrimaryColor) 2%, #303030);
	--BorderColor1: color-mix(in oklab, var(--PrimaryColor) 4%, #3C3C3C);
	--BorderColor2: color-mix(in oklab, var(--PrimaryColor) 8%, #5B5B5B);

	/* Scrollbars */
	--ThumbColor: color-mix(in oklab, var(--PrimaryColor) 4%, #555);
	--ThumbActiveColor: color-mix(in oklab, var(--PrimaryColor) 5%, #666);

	/* Backgrounds */
	--BackColor0: color-mix(in oklab, var(--PrimaryColor) 1%, #101010);
	--BackColor1: color-mix(in oklab, var(--PrimaryColor) 1%, #202020);
	--BackColor2: color-mix(in oklab, var(--PrimaryColor) 2%, #262626);
	--BackColor3: color-mix(in oklab, var(--PrimaryColor) 3%, #2D2D2D);

	/* Text */
	--TextColor0: color-mix(in oklab, var(--ContrastColor) 1%, #888);
	--TextColor1: color-mix(in oklab, var(--ContrastColor) 2%, #CCC);
	--TextColor2: color-mix(in oklab, var(--ContrastColor) 3%, #EEE);
	--LinkInterfaceColor: #688BA8;
	--LinkColor: #648CC8;
	
	/* Sizes */
	--BorderSize: 2px;
	--ScrollbarSize: 14px;
	--ThinScrollbarSize: 10px;
	--PanelsWidth: 200px;
	--HeaderHeight: 60px;
	--DefaultGap: 1.5rem;
	--MaxContentWidth: 1360px;
	
	/* Font */
	--FontSize: 16px;
	--SmallFontSize: .9rem;
	--FontFamily: Inter, sans-serif;
	--MonospaceFontFamily: 'JetBrains Mono', monospace;

	/* Other */
	--Radius0: 2px;
	--Radius1: 4px;
	--Radius2: 6px;
	--TransitionSpeed: .2s;
	--ShadowColor: #0003;
	--Shadow: 0 0 4px 2px var(--ShadowColor);

	/* Presets */
	--Border0: var(--BorderSize) solid var(--BorderColor0);
	--Border1: var(--BorderSize) solid var(--BorderColor1);
	--Border2: var(--BorderSize) solid var(--BorderColor2);
	--BackGradient: linear-gradient(var(--BackColor1) 64px, var(--BackColor0) 256px);
	--MaxPageWidth: calc(var(--MaxContentWidth) + (var(--PanelsWidth) * 2));
}





*
{
	box-sizing: border-box;
	outline: none;
	color-scheme: dark;
}





html
{
	background: var(--BackGradient);
	color: var(--TextColor1);
	font-size: var(--FontSize);
	font-family: var(--FontFamily);
	scroll-behavior: smooth;
	text-size-adjust: 100%;
	
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	-webkit-tap-highlight-color: transparent;
}





body
{
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: var(--DefaultGap);
	margin: 0 auto;
	overflow-x: hidden;
}





::-webkit-scrollbar
{
	width: var(--ScrollbarSize);
	height: var(--ScrollbarSize);
	background: var(--BackColor1);
}





aside::-webkit-scrollbar
{
	width: var(--ThinScrollbarSize);
	height: var(--ThinScrollbarSize);
	background: transparent;
}





::-webkit-scrollbar-corner
{
	background: var(--BackColor1);
}





aside::-webkit-scrollbar-thumb
{
	border: 2px solid transparent;
	background: transparent;
	background-clip: padding-box;
}





::-webkit-scrollbar-thumb
{
	border: 3px solid transparent;
	border-radius: calc(var(--ScrollbarSize) / 2);
	background: var(--ThumbColor);
	background-clip: padding-box;
}





aside:hover::-webkit-scrollbar-thumb
{
	border: 2px solid transparent;
	border-radius: calc(var(--ScrollbarSize) / 2);
	background: var(--ThumbColor);
	background-clip: padding-box;
}





::-webkit-scrollbar-thumb:hover,
aside:hover::-webkit-scrollbar-thumb:hover
{
	background: var(--ThumbActiveColor);
	background-clip: padding-box;
}





::selection
{
	background-color: color-mix(in oklab, var(--PrimaryColor) 40%, transparent);
	color: var(--TextColor2);
}





a::selection
{
	background-color: color-mix(in oklab, var(--PrimaryColor) 60%, transparent);
}





::target-text,
mark
{
	padding: 0 2px;
    margin: 0 -2px;
	background-color: color-mix(in oklab, var(--ContrastColor) 40%, transparent);
	color: var(--TextColor2);
}





a:any-link
{
	--color: var(--LinkInterfaceColor);
	
	color: var(--color);
	text-decoration: none;
	transition: color var(--TransitionSpeed);
}





a:any-link svg
{
	transition: fill var(--TransitionSpeed);
	fill: var(--color);
}





@media (hover: hover)
{
	a:hover
	{
		color: color-mix(in oklab, #FFF 8%, var(--color));
		text-decoration: underline;
	}
	
	
	
	
	
	a:hover svg
	{
		fill: color-mix(in oklab, #FFF 8%, var(--color));
	}
	
	
	
	
	
	.Button:hover
	{
		background: var(--BackColor3);
		border-color: var(--BorderColor2);
		cursor: pointer;
	}
	
	
	
	
	
	.Dropdown:hover
	{
		color: var(--TextColor2);
		cursor: pointer;
	}





	summary:hover
	{
		background-color: var(--BackColor3);
	}
}





a:active
{
	color: color-mix(in oklab, #000 12%, var(--color));
}





a:active svg
{
	fill: color-mix(in oklab, #000 12%, var(--color));
}





button
{
	font: inherit;
}





h1, h2, h3, h4, h5, h6
{
	position: relative;
	color: var(--TextColor2);
	font-weight: 500;
	scroll-margin-top: calc(var(--HeaderHeight) + var(--DefaultGap));
}





h1, h2
{
	padding-bottom: .5rem;
}





h1:after, h2:after
{
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    height: var(--BorderSize);
    width: 100%;
    background-color: var(--BorderColor1);
    border-radius: var(--BorderSize);
	box-shadow: 0 0 4px 0px var(--ShadowColor);
}





hr
{
	height: var(--BorderSize);
	border: 0;
	border-radius: var(--BorderSize);
	background-color: var(--BorderColor1);
	box-shadow: 0 0 4px 0px var(--ShadowColor);
}





h1
{
	margin: 3rem 0 1rem;
	font-size: 1.75rem;
}





h2
{
	margin: 2.75rem 0 .75rem;
	font-size: 1.5rem;
}





h3
{
	margin: 2.5rem 0 .5rem;
	font-size: 1.25rem;
}





h4
{
	margin: 2.25rem 0 .25rem;
	font-size: 1rem;
}





h5
{
	margin: 2rem 0 .25rem;
	font-size: 1rem;
}





h6
{
	margin: 1.75rem 0 .25rem;
	font-size: 1rem;
}





:is(h1, h2, h3, h4, h5) + :is(h2, h3, h4, h5, h6)
{
	margin-top: 1rem;
}





p, ul, ol, blockquote
{
	margin-block: .75rem;
}





ul, ol
{
	margin-inline-start: 2rem;
	padding: 0;
}
/* ... */

